# hvtag

./: .gitattributes  .gitignore  Cargo.toml  README.md  hvdb-tagger.py  hvtag.nuspec  requirements.txt
.github/workflows/: python-app.yml  release.yml
hvdb-tagger/: __main__.py
hvtag/: main.py
src/: circle_manager.rs  config.rs  database.rs  dlsite.rs  errors.rs  folders.rs  main.rs  tag_manager.rs  tag_types.rs  tagger.rs  types.rs
src/database/: custom_circles.rs  custom_cvs.rs  custom_tags.rs  db_loader.rs  migration.rs  queries.rs  sql.rs  tables.rs  web_queries.rs
src/dlsite/: api.rs  scrapper.rs  types.rs
src/folders/: types.rs
src/tagger/: converter.rs  cover_art.rs  flac_handler.rs  folder_normalizer.rs  id3_handler.rs  interactive_parser.rs  mod.rs  track_parser.rs  types.rs
src/types/: dlsite.rs  local.rs
src/vpn/: config.rs  mod.rs  wireguard.rs
src/web/: error.rs  mod.rs  state.rs
src/web/routes/: circles.rs  cvs.rs  mod.rs  static_assets.rs  stats.rs  tags.rs  works.rs
templates/: circles_page.html  circles_table.html  cvs_page.html  cvs_table.html  layout.html  stats.html  tags_page.html  tags_table.html  work_detail.html  works_list.html  works_results.html
tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
