[package]
name = "hvtag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
duckdb = { version = "1.1.1", features = ["bundled"] }
